# openenv-meta-hack

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  requirements.txt  ticket_triage_environment.py
